--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@types/react-router-dom": "^5.3.3",
+    "clsx": "^2.1.1",
+    "lucide-react": "^0.487.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^7.5.0",
+    "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
