--- a/client/package.json
+++ b/client/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
+    "firebase": "^11.6.0",
     "lucide-react": "^0.487.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
     "tailwind-merge": "^3.2.0"
   },
