--- a/server/package.json
+++ b/server/package.json
@@ -2,16 +2,19 @@
   "name": "server",
   "version": "1.0.0",
   "description": "Backend server for Soul Society",
-  "main": "index.js",
+  "main": "server.js",
   "type": "module",
   "scripts": {
-    "start": "node index.js",
-    "dev": "nodemon index.js"
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   },
   "dependencies": {
-    "express": "^4.18.2",
+    "bcryptjs": "^3.0.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1"
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.13.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.2"
