--- a/client/package.json
+++ b/client/package.json
@@ -22,6 +22,7 @@
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.0",
+    "socket.io-client": "^4.8.1",
     "tailwind-merge": "^3.2.0"
   },
   "devDependencies": {
