--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@radix-ui/react-toast": "^1.2.7",
     "@types/react-router-dom": "^5.3.3",
+    "agora-rtc-react": "^2.4.0",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
